--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,11 @@ timezone:
 
 title: CodingCitron # the main title
 
-tagline: 평범한 직장인... # A text-focused Jekyll theme # it will display as the sub-title
+tagline: 비전공자 생존기 # A text-focused Jekyll theme # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  기록하지 않으면 남는게 없다. 
+# A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
